--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "yes",
+  "name": "convite-aniversario",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html src/scripts/main.js src/styles/main.scss",
+    "build": "parcel build src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
